# pants_merge_debug

./: Dockerfile  README.org  docker-compose.yml  pants.toml
py/apps/pyapp/: BUILD
py/apps/pyapp/docker/: BUILD  Dockerfile.main
py/libs/nufft/: BUILD  pyproject.toml  setup.py
py/libs/nufft/docs/: conf.py
py/libs/nufft/nufft/: __init__.py  nufft.py
py/libs/nufft/tests/: BUILD  test_nufft1d.py  test_nufft1d_dft.py  test_nufft2d.py  test_nufft3d.py
py/libs/pybind/: BUILD  MANIFEST.in  pyproject.toml  setup.py
py/libs/pybind/docs/source/: conf.py
py/libs/pybind/pybind/cnufft/: BUILD  Makefile  cnufft.py  cnufft_build.py
py/libs/pybind/tests/: BUILD  test_concurrent.py  test_nufft.py
