# Make lockfile
# $ dephell deps convert --env=lock
[tool.dephell.lock]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "poetrylock", path = "poetry.lock"}

[tool.poetry]
name = "nufft"
version = "0.0.3"
description = "FFT Fortran Module"
authors = ["None <none@none.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Setuptools Plugin",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

numpy = { version = "1.21.6" }
pytest = "^7.1.2"

[build-system]
requires = ["setuptools", "numpy<1.22", "poetry==1.1.13", "wheel"]
build-backend = "setuptools.build_meta"